# dethrace_AOS4

./: README.md
lib/BRender-v1.3.2/: CMakeLists.txt
lib/BRender-v1.3.2/.github/workflows/: main.yml
lib/BRender-v1.3.2/cmake/: packaging.cmake
lib/BRender-v1.3.2/core/: CMakeLists.txt
lib/BRender-v1.3.2/core/fmt/: load3ds.c  loadasc.c  loadscr.c  loadtga.c  savescr.c
lib/BRender-v1.3.2/core/fw/: CMakeLists.txt  brqsort.c  datafile.c  defdiag.c  deffile.c  defmem.c  dev_objs.hpp  devquery.c  devsetup.c  diag.c  fwimg.h  genfile.c  image.c  loader.c  object.c  objectc.c  pool.c  register.c  resource.c  token.c  tokenval.c
lib/BRender-v1.3.2/core/fw/ddi/: brassert.h  brddi.h  brddi_p.h  brimage.h  dataf_p.h  datafile.h  formats.h  lexer.h  register.h  shortcut.h  tokenmap.h
lib/BRender-v1.3.2/core/fw/include/: brstdlib.h
lib/BRender-v1.3.2/core/host/: CMakeLists.txt  himage.c  host_asm.c  hostcfg.c  hstsetup.c
lib/BRender-v1.3.2/core/inc/: CMakeLists.txt  assoca_p.h  brfile.h  brmem.h  colour.h  compend.h  compiler.h  fixed.h  fw_p.h  g386ifix.h  material.h  math_p.h  model.h  pixelmap.h  syscn_p.h  token.h  v1db_p.h
lib/BRender-v1.3.2/core/math/: fixed.c  quat.c
lib/BRender-v1.3.2/core/math/ddi/: math_ip.h
lib/BRender-v1.3.2/core/pixelmap/: CMakeLists.txt  cmemloops.c  fntp4x6.c  fntp7x9.c  mipsupt.c  pmdsptch.c  pmfile.c  pmmem.c  pmsetup.c  scale.c
lib/BRender-v1.3.2/core/pixelmap/ddi/: pm_ip.h
lib/BRender-v1.3.2/core/std/: CMakeLists.txt  stdlib.c  stdmem.c
lib/BRender-v1.3.2/core/v1db/: actsupt.c  dbquery.c  dbsetup.c  def_mdl.c  enables.c  modrend.c  pick.c  prelight.c  prepmap.c  prepmatl.c  prepmesh.c  query.c  render.c  v1dbfile.c
lib/BRender-v1.3.2/drivers/: CMakeLists.txt
lib/BRender-v1.3.2/drivers/3dfx_win/: device.h
lib/BRender-v1.3.2/drivers/pentprim/: CMakeLists.txt  common.h  compiler.h  decal.c  device.c  driver.c  drv_ip.h  fpsetup.c  fpsetup.h  fpwork.h  fti8_pip.c  fti8_piz.c  fti8pizp.asm  fti8pizp.c  l_pi.c  l_piz.c  match.c  mmx_ip.h  p_pi.c  p_piz.c  pfpsetup.c  pfpsetup.h  plib.c  plib.h  prim_t8.ifg  pstate.c  safediv.c  sar16.c  sar16.h  sbuffer.c  t15_pizp.c  ti8_pi.c  ti8_piz.c  ti8_pizp.c  work.h  zb8.c  zb8awtm.c  zb8p2lit.c  zb8p2ltb.c  zb8p2ulb.c  (+1 more)
lib/BRender-v1.3.2/drivers/softrend/: CMakeLists.txt  clip.c  convert.c  driver.c  drv_ip.h  face_386.h  faceops.c  genrend.c  heap.c  mapping.c  ocfree.c  renderer.c  rendfcty.c  rndstate.c  setup.c  sstate.c  state.c  subdiv.c  v1m_386.h  v1model.c
lib/BRender-v1.3.2/drivers/softrend/ddi/: priminfo.h
lib/BRender-v1.3.2/examples/: CMakeLists.txt
lib/BRender-v1.3.2/examples/softcube/: CMakeLists.txt  main.c
lib/BRender-v1.3.2/make/: tokgen.pl
lib/BRender-v1.3.2/tools/timetest/: timetest.c
lib/BRender-v1.3.2/x86emu/: CMakeLists.txt  x86emu.c
lib/BRender-v1.3.2/x86emu/include/: x86emu.h
lib/miniaudio/include/miniaudio/: miniaudio.h  miniaudio.h.back
lib/stb/include/stb/: stb_vorbis.c
src/DETHRACE/: CMakeLists.txt  main.c  version.h.in
src/DETHRACE/amigaos4/: amigaos4.c  amigaos4.h
src/DETHRACE/common/: input.c  loading.c
src/DETHRACE/pc-win95/: win95sys.c
src/S3/: CMakeLists.txt
src/harness/: CMakeLists.txt  harness.c  version.h.in
src/harness/audio/: miniaudio.c
src/harness/include/harness/: trace.h
src/harness/os/: amigaos4.c
test/: main.c
